Refactor: Update filtering in ServicoController to use collect instead of toList; remove unused pesquisarServicos method